objects/vlocity_ins__ProjectItem__c.object
<CustomObject>
    <description>RESERVED. For future use under Insurance and Health.</description>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <description>The globally unique identifier of this Project Item. Used to identify the Project Item record across Salesforce instances.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ItemGlobalKey__c</fullName>
        <description>The global key of the referenced item object.</description>
        <label>Item Global Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ItemId__c</fullName>
        <description>Polymorphic reference to the Salesforce Id of the item object.</description>
        <externalId>true</externalId>
        <label>Item</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ItemType__c</fullName>
        <description>The type of the referenced item object.</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ItemVersion__c</fullName>
        <description>The version of the referenced item object, wherever applicable.</description>
        <label>Item Version</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ParentItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Item</label>
        <referenceTo>vlocity_ins__ProjectItem__c</referenceTo>
        <relationshipLabel>Project Items</relationshipLabel>
        <relationshipName>ProjectItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProjectId__c</fullName>
        <description>Master-detail reference to the parent project.</description>
        <label>Project</label>
        <referenceTo>vlocity_ins__Project__c</referenceTo>
        <relationshipLabel>Project Items</relationshipLabel>
        <relationshipName>ProjectItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Project Item</label>
    <nameField>
        <label>Project Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>